@@ -23,8 +23,8 @@ For community support, go to [StackOverflow](https://stackoverflow.com/questions
 
 Issues can be reported to the [Issue tracker](https://github.com/gluonhq/scenebuilder/issues/)
 
-Contributions can be submitted via [Pull requests](https://github.com/gluonhq/scenebuilder/pulls/)
-
+Contributions can be submitted via [Pull requests](https://github.com/gluonhq/scenebuilder/pulls/), 
+providing you have signed the [Gluon Individual Contributor License Agreement (CLA)](https://docs.google.com/forms/d/16aoFTmzs8lZTfiyrEm8YgMqMYaGQl0J8wA0VJE2LCCY).
 
 ## Building Scene Builder ##
 
@@ -34,8 +34,8 @@ Gluon Scene Builder is frequently released, and this is only required in case yo
 
 These are the requisites:
 
-* A recent version of [JDK 8](http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html) for building 'master' branch
-* A recent version of [JDK 9 or later](http://www.oracle.com/technetwork/java/javase/downloads/index.html) for building 'integration-9' branch
+* A recent version of [JDK 11 or later](https://www.oracle.com/technetwork/java/javase/downloads/index.html) for building 'master' branch
+* A recent version of [JDK 8](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html) for building '8u-dev' branch
 
 ### How to build Scene Builder ###
 
@@ -43,4 +43,33 @@ To build the Scene Builder services, on the project's root, run:
 
 `./gradlew clean build`
 
-It will create an executable jar under `app/build/libs/scenebuilder-$version-all.jar`.
+It will create a partial shadow cross-platform jar under `app/build/libs/scenebuilder-$version.jar`, that doesn't include the JavaFX dependencies.
+
+### How to run Scene Builder ###
+
+You can run it with Gradle:
+
+`./gradlew run`
+
+or you can run the partial shadow jar, providing you have downloaded the JavaFX SDK from [here](https://gluonhq.com/products/javafx/):
+
+`java --module-path /path/to/javafx-sdk-$javafxVersion/lib --add-modules javafx.web,javafx.fxml,javafx.swing,javafx.media --add-opens=javafx.fxml/javafx.fxml=ALL-UNNAMED -cp app/build/libs/scenebuilder-$version.jar com.oracle.javafx.scenebuilder.app.SceneBuilderApp                                                           
+
+## Scene Builder Kit ##
+
+To build and install the Scene Builder Kit in your local repository, run:
+
+`./gradlew clean :kit:install`
+
+The custom controls of the Scene Builder kit can be used in your project. 
+You can add it as a regular dependency to the build of your app:
+
+```
+repositories {
+    mavenLocal()
+}
+
+dependencies {
+    implementation ('com.gluonhq.scenebuilder:scenebuilder-kit:$version') { transitive = false }
+}
+```
